--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,12 +27,12 @@ services:
   djangoblog:
     build: .
     restart: always
-    command: bash -c 'sh /code/djangoblog/bin/docker_start.sh'
+    command: bash -c 'sh /home/jerry/django/DjangoBlog/djangoblog/bin/docker_start.sh'
     ports:
       - "8000:8000"
     volumes:
-      - ./collectedstatic:/code/djangoblog/collectedstatic
-      - ./logs:/code/djangoblog/logs
+      - ./collectedstatic:/home/jerry/django/DjangoBlog/djangoblog/collectedstatic
+      - ./logs:/home/jerry/django/DjangoBlog/djangoblog/logs
     environment:
       - DJANGO_MYSQL_DATABASE=djangoblog
       - DJANGO_MYSQL_USER=root
@@ -50,12 +50,12 @@ services:
     restart: always
     image: nginx:latest
     ports:
-      - "80:80"
+      # - "80:80"
       - "8080:8080"
       - "443:443"
     volumes:
       - ./bin/nginx.conf:/etc/nginx/nginx.conf
-      - ./collectedstatic:/code/djangoblog/collectedstatic
+      - ./collectedstatic:/home/jerry/django/DjangoBlog/djangoblog/collectedstatic
     links:
       - djangoblog:djangoblog
     container_name: nginx
